--- a/index.html
+++ b/index.html
@@ -36,47 +36,47 @@
               <h2>Everton Lima da Silva</h2>
             </div>
             <div class="w3-container">
-              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Estágiario</p>
-              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Mauá-SP, Brasil</p>
-              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>evertonsilva.lima321@gmail.com</p>
-              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>11987411448</p>
+              <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text"></i>Estágiario</p>
+              <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text"></i>Mauá-SP, Brasil</p>
+              <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text"></i>evertonsilva.lima321@gmail.com</p>
+              <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text"></i>11987411448</p>
               <hr>
   
               <p class="w3-large">
-                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b>
+                <b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text"></i>Skills</b>
               </p>
               <p>Java</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3" style="width:50%">50%</div>
               </div>
               <p>Java Script</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3" style="width:50%">50%</div>
               </div>
               <p>CSS</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:65%">65%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3" style="width:65%">65%</div>
               </div>
               <p>HTML</p>
               <div class="w3-light-grey w3-round-xlarge w3-small">
-                <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">80%</div>
+                <div class="w3-container w3-center w3-round-xlarge w3" style="width:80%">80%</div>
               </div>
               <br>
   
               <p class="w3-large w3-text-theme">
-                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Idiomas</b>
+                <b><i class="fa fa-globe fa-fw w3-margin-right w3-text"></i>Idiomas</b>
               </p>
               <p>Português</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                <div class="w3-round-xlarge w3" style="height:24px;width:100%"></div>
               </div>
               <p>Inglês</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
+                <div class="w3-round-xlarge w3" style="height:24px;width:30%"></div>
               </div>
               <p>Espanhol</p>
               <div class="w3-light-grey w3-round-xlarge">
-                <div class="w3-round-xlarge w3-teal" style="height:24px;width:30%"></div>
+                <div class="w3-round-xlarge w3" style="height:24px;width:30%"></div>
               </div>
               <br>
             </div>
@@ -89,7 +89,7 @@
         <div class="w3-twothird">
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
-            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Sobre</h2>
+            <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text"></i>Sobre</h2>
             <p>Eu sou Everton Lima da Silva, tenho o compromisso de ajudar empresas a obterem lucros e conquistarem suas metas. Sou Discente de Especialização em Engenharia da Computação. Atuo em áreas que agregam aprendizado e aplicação de conhecimentos teóricos. Tenho mais de 10 anos de experiência profissional.
 
               Com vivência e capacidade para as funções de Manutenções de Máquinas Industriais, Estagiário de Programação e Desenvolvedor Trainee, realizando trabalhos em equipe, com disciplina e integração com a empresa para melhor atender o cliente.
@@ -102,53 +102,37 @@
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Experiências
+              <i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text"></i>Experiências
             </h2>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Contric Robaótic </b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06/2020 - <span class="w3-tag w3-teal w3-round">05/2023</span></h6>
+              <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>06/2020 -05/2023 <span class="w3-tag w3 w3-round"></span></h6>
               <p>Atuação manutenção preventiva e corretiva, montagem de NR 12, tubulação de inox, aço carbono, CPVC, válvulas hidráulicas, pistão Hidráulica e pneumática industrial.</p>
               <hr>
             </div>
             <div class="w3-container">
               <h5 class="w3-opacity"><b>Contric Módena </b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12/2018-03/2020</h6>
+              <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>12/2018-03/2020</h6>
               <p>Atuação manutenção preventiva e corretiva, montagem de NR 12, tubulação de inox, aço carbono, CPVC, válvulas hidráulicas, pistão Hidráulica e pneumática industrial.</p>
             </div>
           </div>
   
           <div class="w3-container w3-card w3-white">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Educação
+              <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text"></i>Educação
             </h2>
             <div class="w3-container">
-              <h5 class="w3-opacity"><b>Digital Innovation One (DIO)</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - <span class="w3-tag w3-teal w3-round">Atual</span></h6>
-              <p>
-                Maior plataforma de educação aberta em TI da América Latina, com mais 1 milhão de usuários. 
-                A DIO possui parcerias com algumas das empresas mais inovadoras do mundo, proporcionando experiências 
-                de ensino imersivas e com foco em empregabilidade. Nesse contexto, seguem meus principais certificados:
-              </p>
-              <ul>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-                <li><a href="LINK_CERTIFICADO" target="_blank">TODO</a></li>
-              </ul>
-              <hr>
-            </div>
-            <div class="w3-container">
-              <h5 class="w3-opacity"><b>TODO</b></h5>
-              <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>INICIO - FIM</h6>
-              <p>TODO</p>
-            </div>
-          </div>
+              <h5 class="w3-opacity"><b>Faculdades Metropolitanas Unidas (FMU)</b></h5>
+              <h6 class="w3-text"><i class="fa fa-calendar fa-fw w3-margin-right"></i>02/2021 - 12/2025<span class="w3-tag w3 w3-round">Atual</span></h6>
+              
+            </p>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16">
-              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projetos
+              <i class="fa fa-git fa-fw w3-margin-right w3-xxlarge w3-text"></i>Projetos
             </h2>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text">
                 <i class="fa fa-github fa-fw w3-margin-right"></i>
                 <a href="LINK_GITHUB" target="_blank">USUARIO_GITHUB/REPO</a>
               </h6>
@@ -156,7 +140,7 @@
               <hr>
             </div>
             <div class="w3-container">
-              <h6 class="w3-text-teal">
+              <h6 class="w3-text">
                 <i class="fa fa-gitlab fa-fw w3-margin-right"></i>
                 <a href="LINK_GITLAB" target="_blank">USUARIO_GITLAB/REPO</a>
               </h6>
@@ -173,7 +157,7 @@
       <!-- End Page Container -->
     </div>
   
-    <footer class="w3-container w3-teal w3-center w3-margin-top">
+    <footer class="w3-container w3 w3-center w3-margin-top">
       <p>Minhas Redes Sociais</p>
       <a href="LINK_GITHUB" target="_blank"><i class="fa fa-github w3-hover-opacity"></i></a>
       <a href="LINK_LINKEDIN" target="_blank"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
